test/libhyperion/syntaxTests/denominations/invalid_denomination_on_string.hyp
contract C {
	string s = "abc" znd;
}
// ----
// ParserError 2314: (31-36): Expected ';' but got 'znd'
